[package]
name = "DB4NFV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.8.1"
crossbeam = "0.8.4"
fast_log = "1.6.12"
lazy_static = "1.4.0"
libloading = "0.8.1"
log = "0.4.20"
object-pool = "0.5.4"
once_cell = "1.19.0"
ringbuffer = "0.15.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
structopt = "0.3.26"
